--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>hello world!<h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>北京均大制药有限公司</title>
+</head>
+<body>
+
+    <a href="http://172.18.11.223">公司内网首页</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="http://36.110.2.211:7005">公司内网首页（外网入口）</a>	<br/></br>
+		<a href="http://172.18.11.222">云盘（内网）</a>	<br/></br>
+		<a href="https://www.cleverpdf.com/cn">PDF文件在线转换</a>	<br/></br>
+		<a href="http://10.3.5.101:8080/portal/main.jsp">EAS报销（内网）推荐</a>	<br/><br/>
+		<a href="http://219.139.241.228:8088/portal/main.jsp">EAS报销（外网，在公司外使用）</a>	<br/><br/>
+		<a href="http://oa.jztey.com/login/Login.jsp">OA系统</a>	<br/><br/>
+		<a href="http://link.jztweb.com">即时通常用链接</a>	<br/><br/>
+		<a href="ftp://172.18.11.223">下载</a>	<br/>
+		</br></br></br></br></br></br></br></br></br>
+		<a href="http://172.18.11.221">ESXI6.7服务器</a>	<br/>
+		<a href="https://172.18.11.200">TE20</a>	<br/>
+		</br></br></br></br></br></br></br></br></br>
+		<a href="http://36.110.2.211:7005">公司内网首页（外网）</a>	<br/>
+		<a href="http://36.110.2.211:7003">云盘（外网）</a>	<br/>
+		<a href="https://36.110.2.211:7004">ESXI6.7服务器</a>	<br/>
+		<a href="https://36.110.2.211:7002">TE20</a>	<br/>
+</body>
+</html>
